Fixes #51: Fine-tune spacing on homepage

--- a/src/GlobeSoft/DamOSansaViitoruluiBundle/Resources/public/css/content.less
+++ b/src/GlobeSoft/DamOSansaViitoruluiBundle/Resources/public/css/content.less
@@ -54,3 +54,13 @@
     margin-right: 1em;
   }
 }
+
+.homepage {
+  .btn {
+    margin: 0;
+  }
+
+  .jumbotron {
+    padding: 0;
+  }
+}
